--- a/examples/index.html
+++ b/examples/index.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
-		<script type="text/javascript" src="lib/jquery/jquery-1.4.2.min.js"></script>
+		<script type="text/javascript" src="../lib/jquery/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript">
 			jQuery.noConflict();
 			var $j = jQuery;
 		</script>
-		<script type="text/javascript" src="lib/prototype/prototype.js"></script>
-		<script type="text/javascript" src="lib/showdown/showdown.js"></script>
-		<script type="text/javascript" src="lib/liquid/liquid.js"></script>
+		<script type="text/javascript" src="../lib/prototype/prototype.js"></script>
+		<script type="text/javascript" src="../lib/showdown/showdown.js"></script>
+		<script type="text/javascript" src="../lib/liquid/liquid.js"></script>
 		
 	</head>
 	<body>
