--- a/examples/wmd-example.html
+++ b/examples/wmd-example.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="wysiwym.css" rel="stylesheet" type="text/css"/>
+		<link href="../src/wysiwym.css" rel="stylesheet" type="text/css"/>
 		<script type="text/javascript" src="../lib/jquery/jquery-1.4.2.min.js" > </script>
 		<script type="text/javascript" >
 			jQuery.noConflict();
